--- a/styleTentang.css
+++ b/styleTentang.css
@@ -32,7 +32,7 @@ header {
   z-index: 100;
   height: 80px;
 }
-
+        
 .header-container {
   display: flex;
   justify-content: space-between;
@@ -75,16 +75,10 @@ header {
   font-family:manrope;
 }
 
-.nav-menu a.login-register {
-  background-color: #ffffff;
-  border: 2px solid #333333;
-  padding: 8px 24px;
-  border-radius: 24px;
-  color: #333333;
-  font-family: manrope;
-  font-weight: 500;
-  transition:all 0.3s ease;
-  margin-left: 20px;
+.kontak {
+  margin-left: 10px;
+  display: flex;
+  align-items: center;
 }
 
 /* Section Title */
@@ -568,7 +562,7 @@ header {
   }
   .timeline-item::before {
     transform: none;
-    left: 50%;
+    left: 50%; 
     content: '';
     position: absolute;
     top: 0;
